<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Directions">


    <TextView
        android:id="@+id/directionsSet"
        android:layout_width="355dp"
        android:layout_height="532dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="92dp"
        android:scrollbars="vertical"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/next_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:onClick="nextPressed"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/prev_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="184dp"
        android:layout_marginBottom="12dp"
        android:text="Previous"
        android:onClick="previousExhibit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directionsSet" />

    <Button
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="247dp"
        android:layout_marginBottom="24dp"
        android:text="Skip"
        android:onClick="skipPressed"
        app:layout_constraintBottom_toTopOf="@+id/prev_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directionsSet"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="24dp"
        android:text="Continue"
        android:onClick="continuePressed"
        app:layout_constraintBottom_toTopOf="@+id/prev_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/skip_btn"
        app:layout_constraintTop_toBottomOf="@+id/directionsSet"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="55dp"
        android:layout_height="44dp"
        android:layout_marginStart="231dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="2dp"
        android:onClick="sendSettings"
        android:text="S"
        app:layout_constraintBottom_toTopOf="@+id/directionsSet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/change_loc_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/change_loc_btn"
        android:layout_width="73dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:onClick="sendMock"
        android:text="LOC"
        app:layout_constraintBottom_toTopOf="@+id/directionsSet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>